--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pictures",
+  "homepage": "https://Julia-ivv.github.io/pictures",
   "version": "0.0.1",
   "description": "",
   "main": "main.js",
@@ -17,6 +18,7 @@
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -42,6 +44,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Julia-ivv/pictures/issues"
-  },
-  "homepage": "https://github.com/Julia-ivv/pictures#readme"
+  }
 }
